Project

General

Profile

Actions

Bug #48206

closed

client: fix crash when doing remount in none fuse case

Added by Xiubo Li over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, libcephfs
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The g_conf() will try to dereference the `g_ceph_context` to get the `_conf`, but the `g_ceph_context` is not set in none fuse use case in libcephfs, so it will crash in `g_conf().get_val<>`.

Switch to use `cct->_conf.get_val<>` instead.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #48457: nautilus: client: fix crash when doing remount in none fuse caseResolvedWei-Chung ChengActions
Copied to CephFS - Backport #48458: octopus: client: fix crash when doing remount in none fuse caseResolvedWei-Chung ChengActions
Actions #1

Updated by Xiubo Li over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 38033
Actions #2

Updated by Patrick Donnelly over 3 years ago

  • Target version set to v16.0.0
  • Source set to Development
  • Backport set to octopus,nautilus
  • ceph-qa-suite deleted (fs)
  • Component(FS) Client added
Actions #3

Updated by Patrick Donnelly over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48457: nautilus: client: fix crash when doing remount in none fuse case added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48458: octopus: client: fix crash when doing remount in none fuse case added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF